test/langtools/tools/javac/T8312163.out
T8312163.java:18:18: compiler.err.pattern.dominated
T8312163.java:28:18: compiler.err.pattern.dominated
T8312163.java:33:18: compiler.err.pattern.dominated
T8312163.java:39:18: compiler.err.pattern.dominated
T8312163.java:49:18: compiler.err.pattern.dominated
T8312163.java:54:18: compiler.err.pattern.dominated
6 errors